# ai_race

./: .env  .gitignore  README.md  build_synthetic_data.py  pyproject.toml  validate_medical.py
.github/workflows/: pytest.yml
data/: icd_mapping_final.json  ontology_pool_final.json  treatment_classification.json
data/raw/: DM ICD10-19_8_BYT.xlsx
data/raw/rxnorm_data/: rxnorm_BN.json  rxnorm_DF.json  rxnorm_IN.json  rxnorm_MIN.json  rxnorm_PIN.json  rxnorm_SBD.json  rxnorm_SCD.json  rxnorm_SCDC.json
data/validated/: validated_pass.jsonl  validation_report.json
scripts/: __init__.py  build_synthetic_data.py  build_synthetic_data_llm7b.py  common.py  generate.py  prepare_sources.py  run_all.py  validate_medical.py
src/: clinical_pipeline.py  main_pipeline.py  run_inference.py  train_ner.py
src/assertion/: __init__.py  detector.py  rules.py  schemas.py  scope.py  verifier.py
src/linking/: __init__.py  bm25.py  candidate_generator.py  dense.py  disambiguation.py  exact_match.py  fusion.py  linker.py  metrics.py  ontology.py  reranker.py  schemas.py  text.py
src/ner/: __init__.py  datasets.py  drug_rules.py  evaluate.py  inference.py  metrics.py  postprocess.py  trainer.py
src/preprocessing/: __init__.py  constants.py  loaders.py  normalize.py  schemas.py
src/validation_output/: __init__.py  serializer.py  validator.py
tests/: test_assertion.py  test_clinical_pipeline.py  test_drug_rules.py  test_linking.py  test_ner_datasets.py  test_ner_inference.py  test_ner_trainer.py  test_run_inference.py  test_synthetic_adapter.py
work/: drug_mapping_final.json
work/validated/: validation_errors.jsonl  validation_report.json
