[project]
name = "viettel-ai-race-medical-nlp"
version = "0.1.0"
description = "Self-hosted Vietnamese medical NER, assertion detection, and ontology linking pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gliner>=0.2.27,<0.3",
    "huggingface-hub>=0.34,<2",
    "pandas>=2.2,<4",
    "python-dotenv>=1.0,<2",
    "rapidfuzz>=3.9,<4",
    "requests>=2.32,<3",
    "torch>=2.7,<3",
]

[project.optional-dependencies]
retrieval = [
    "sentence-transformers>=5,<6",
]
gemini = [
    "google-genai>=1,<2",
]

[dependency-groups]
dev = [
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 88

